# iot-rust

./: CLAUDE.md  Cargo.toml  config.toml
protocols/: gb26875.toml
src/: error.rs  main.rs
src/protocol/: field.rs  frame_parser.rs  mod.rs  traits.rs
src/protocol/gb26875/: codec.rs  framing.rs  mod.rs
src/server/: config.rs  listener.rs
