[package]
name = "iot-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
hex = "0.4"
encoding_rs = "0.8"
toml = "1.0.3"
serde = { version = "1.0.228", features = ["derive"] }
bytes = "1.11.1"
thiserror = "2.0.18"
futures = "0.3"
